Add forgot password message

--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -68,6 +68,12 @@ $(document).ready(function() {
                 </small>
             </div>
         </div>
+        <div class="row">
+            <div class="six columns offset-by-three flash">
+                <strong>Forgot your password?</strong> E-mail us for assistance,
+                <a href="mailto:{{ contact_email }}">{{ contact_email }}</a>
+            </div>
+        </div>
     </form>
     <hr>
     <div class="row">
