--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -208,8 +208,8 @@
                 </div>
                 {% endif %}
             </div>
-
-            {{ render_action_list(actions.all()[0:4]) }}
+            
+            {{ render_action_list(actions.all()) }}
 
             <hr>
             <div class="row">
