--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -89,7 +89,7 @@
 {% endblock %}
 
 {% block content %}
-{% from "helpers/causes.html" import render_log %}
+{% from "helpers/causes.html" import render_log with context %}
 {% from "helpers/modals.html" import render_modal %}
 {% from "helpers/users.html" import render_avatar %}
 {% from "helpers/actions.html" import render_action_list with context %}
