Various consistency fixes, working tests:
 * add UserViewsTests._login method for required session finagling
 * ensure we raise a 404 instead of a 500 on cause / user not found
 * add title to 404 page
 * clearer permissions checks in user edit views

--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -3,9 +3,11 @@
 {% block scripts %}
 {% endblock %}
 
+{% block title %}Not found - {{ super() }}{% endblock %}
+
 {% block content %}
 <div class="row">
-    <div class="six columns offset-by-three">
+    <div class="six columns offset-by-three u-add-margin-top">
         <h2>Not Found</h2>
         <pre style="font-size:0.7em;">
        444444444       000000000            444444444  
