--- a/app/templates/helpers/actions.html
+++ b/app/templates/helpers/actions.html
@@ -34,7 +34,9 @@ section (app/templates/styleguide/templating#)
             <a class="button button-primary support" rel="external"  target="_blank"
                 data-support-href="{{ url_for('causes.action_support', slug=cause.slug,
                 pk=action.id) }}"
-                href="{{ action.link }}">{{ _('Support!') }}</a>
+                {% if current_user.is_authenticated %}
+                href="{{ action.link }}"
+                {% endif %}>{{ _('Support!') }}</a>
             {% else %}
             <a class="button button-primary" href="{{ url_for('causes.action_support', slug=cause.slug,
                 pk=action.id) }}">{{ _('Support!') }}</a>
@@ -95,10 +97,15 @@ section (app/templates/styleguide/templating#)
         {% if current_user not in action.supporters.all() %}
         <p class="u-remove-margin-bottom u-pull-right">
             {% if action.link %}
-            <a class="button button-primary support" rel="external"  target="_blank"
-                data-support-href="{{ url_for('causes.action_support', slug=cause.slug,
-                pk=action.id) }}"
-                href="{{ action.link }}">{{ _('Support!') }}</a>
+                {% if current_user.is_authenticated %}
+                <a class="button button-primary support" rel="external"  target="_blank"
+                    data-support-href="{{ url_for('causes.action_support', slug=cause.slug,
+                    pk=action.id) }}"
+                    href="{{ action.link }}">{{ _('Support!') }}</a>
+                {% else %}
+                <a class="button button-primary support"
+                   href="{{ url_for('users.login', next='/cause/demo/dashboard') }}#modal-action-{{ action.id }}">{{ _('Support!') }}</a>
+                {% endif %}
             {% else %}
             <a class="button button-primary" href="{{ url_for('causes.action_support', slug=cause.slug,
                 pk=action.id) }}">{{ _('Support!') }}</a>
