--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% set active_page = "login" %}
 
+{% block title %}Login - {{ super() }}{% endblock title %}
+
 {% block scripts %}
 {{ super() }}
 <script type="text/javascript" src="{{ url_for('static', filename='jQuery-Form-Validator/form-validator/jquery.form-validator.min.js') }}"></script>
@@ -18,15 +20,15 @@ $(document).ready(function() {
 <div class="container u-add-margin-top">
     <div class="row">
         <div class="six columns offset-by-three flash warning">
-            <strong>Pssssst..</strong> we try to keep your data private; if
-            you're particularly worried, have a look at our
-            <a href="/security">security tips</a>.
+            <strong>Need to protect your privacy?</strong> Use a pseudonym when you
+            <a href="{{ url_for('.signup') }}">sign up</a>, and don't log
+            in with a social media account linked to your real identity.
         </div>
     </div>
     <div class="row">
         <div class="six columns offset-by-three help-block">
             {{ _('Don\'t have an account?') }}
-            <a href="{{ url_for('users.signup') }}" class="button button-primary u-add-margin-left">Sign up</a>
+            <a href="{{ url_for('.signup') }}" class="button button-primary u-add-margin-left">Sign up</a>
         </div>
     </div>
     {% from "helpers/forms.html" import render_field, render_boolean %}
@@ -55,7 +57,7 @@ $(document).ready(function() {
         </div>
         <div class="row">
             <div class="six columns offset-by-three flash">
-                <strong>Forgot your password?</strong> E-mail us for assistance,
+                <strong>Forgot your password?</strong> E-mail us for assistance:
                 <a href="mailto:{{ contact_email }}">{{ contact_email }}</a>
             </div>
         </div>
