--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -384,29 +384,60 @@ h3 span{
     display: inline;
 }
 .bx-wrapper .bx-controls-direction a {
-    top: 54%; 
-    z-index: 999;
+    top: 7%; 
+    z-index: 99;
+    height: 100%;
 }
 .bx-wrapper .bx-prev {
     left: 0;
+    background: linear-gradient(to left, rgba(255,255,255,0), rgba(255,255,255,1)); 
 }
 .bx-wrapper .bx-next {
     right: 0;
+    background: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,1)); 
 }
-.support-action {
-    width: 356px;
-    height: 200px;
-    display: block;
-    border: 1px solid #bbb;
-    /*border-radius: 4px;*/
-    border-color: #3299bb;
-    /*background-color: #fbfaf9;*/
-    box-shadow: 0 0 10px #e5e5e5;
-    padding: 0.5em 1em;
-    margin-top: 1em;
+.bx-wrapper .bx-next:before {
+    content: " ";
+    background: url(../open-iconic/png/chevron-right-2x.png) no-repeat center right;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+.bx-wrapper .bx-prev:before {
+    content: " ";
+    background: url(../open-iconic/png/chevron-left-2x.png) no-repeat center left;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+.bx-wrapper .bx-next:focus,
+.bx-wrapper .bx-next:hover,
+.bx-wrapper .bx-prev:focus,
+.bx-wrapper .bx-prev:hover {
+    background-position: 0;
+}
+.bx-wrapper .bx-next:hover:before {
+    background: url(../open-iconic/png/chevron-right-3x.png) no-repeat center right;
+}
+.bx-wrapper .bx-prev:hover:before {
+    background: url(../open-iconic/png/chevron-left-3x.png) no-repeat center left;
+}
+.actions-slider {
+    margin-right: 16px;
+}
+.actions-slider li {
 }
 a.support-action {
+    width: 90%;
     text-decoration: none;
+    border: 1px solid #bbb;
+    border-color: #3299bb;
+    box-shadow: 0 0 10px #e5e5e5;
+    padding: 0.5em 1em;
 }
 .support-action:hover {
     border-color: #1eaeda;
