Actions with links now have a button to follow 3rd party link event after action has been taken. All actions now have a note if use already took them

--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -43,7 +43,7 @@
             slideWidth: 345,
             minSlides: 1,
             maxSlides: 3,
-            slideMargin: 32,
+            slideMargin: 32
         });
         $('#stand-with-us').click(function() {
             ga('send', {
