--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -143,16 +143,7 @@
                         data-target="modal-share">
                         {{ _('Share') }}
                     </a>
-                    <h4 class="u-add-margin-top">
-                        {{ _('%(count)s supporters', count=cause.supporters.all() | length) }}
-                    </h4>
-                    {% for u in cause.supporters.all()[-10:] | reverse %}
-                        {{ render_avatar(u) }}
-                        {% if loop.last and loop.index == 10 %}
-                            <small class="see-all"><a href="{{ url_for('causes.view_cause_supporters', slug=cause.slug) }}">See&nbsp;all&nbsp;{{ cause.supporters.all() | length }}</a></small>
-                        {% endif %}
-                    {% endfor %}
-                    <h4 class="u-add-margin-top">
+                    <h4 class="u-add-margin-top u-remove-margin-bottom">
                         {{ _('Creators') }}
                     </h4>
                     {% for u in cause.creators.all()[-10:] | reverse %}
@@ -161,6 +152,19 @@
                             <small class="see-all"><a href="{{ url_for('causes.view_cause_creators', slug=cause.slug) }}">See&nbsp;all&nbsp;{{ cause.creators.all() | length }}</a></small>
                         {% endif %}
                     {% endfor %}
+<h4 class="u-add-margin-top u-remove-margin-bottom">
+                        {{ _('%(count)s supporters', count=cause.supporters.all() | length) }}
+                    </h4>
+                    {% for u in cause.supporters.all()[-10:] | reverse %}
+                        {{ render_avatar(u) }}
+                        {% if loop.last and loop.index == 10 %}
+                            <small class="see-all"><a href="{{ url_for('causes.view_cause_supporters', slug=cause.slug) }}">See&nbsp;all&nbsp;{{ cause.supporters.all() | length }}</a></small>
+                        {% endif %}
+                    {% endfor %}
+                    <h4 class="u-add-margin-top u-remove-margin-bottom">
+                        {{ _('Actions taken') }}
+                    </h4>
+                    <h1>{{ cause.count_action_supports }}</h1>
                 </div>
                 <div id="modal-share" class="modal">
                     <div style="width:300px;">
