Fixed language in actions section

--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -208,8 +208,9 @@
                     <h3 id="actions">
                         {{ _('Take action to win') }}
                         <span>
-                            {{ _('%(count)s available | ', count=actions.count()) }}
-                            {{ _('%(count)s users took action', count=cause.count_action_supports) }}
+                            {{ _('%(count)s available', count=actions.count()) }}
+                            &nbsp;|&nbsp;
+                            {{ _('%(count)s taken', count=cause.count_action_supports) }}
                         </span>
                     </h3>
                 </div>
