--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -290,6 +290,7 @@ h3 span{
     max-width: 900px;
 }
 .glass::before {
+    background-size: cover;
     width: 100%;
     height: 100%;
     margin-left: -50%;
