--- a/app/templates/posts/post.html
+++ b/app/templates/posts/post.html
@@ -32,6 +32,19 @@
             {% endif %}
         </div>
         <div class="one-half column">
+            <h4 class="u-remove-margin-bottom">{{ _('%(count)s comments', count=post.comments.count()) }}</h4>
+            {% for comment in post.comments.all() %}
+                <div class="row u-add-margin-top">
+                    <div class="post column comment">
+                        {{ comment.body|markdown }}
+                        <p class="u-pull-right u-remove-margin-bottom">
+                            {{ render_avatar(comment.author) }}
+                            <em>{% if comment.created_on %}{{ comment.created_on.strftime('%b. %d, %Y') }}{% endif %}</em>
+                        </p>
+                    </div>
+                </div>
+            {% endfor %}
+            <h5 class="u-add-margin-top">Leave a comment</h5>
             {% if current_user.is_authenticated and current_user.is_supporting(cause) %}
             {% from "helpers/forms.html" import render_field, render_boolean %}
             <form id="cause" class="u-add-margin-top" name="cause" action="{{ url_for('posts.comment_add', slug=cause.slug, pk=post.id) }}" method="post">
@@ -42,25 +55,23 @@
                 <input id="save" type="submit" value="Post"
                     class="button button-primary">
             </form>
+            {% elif not current_user.is_authenticated %}
+            <p><strong>
+                <a href="{{ url_for('causes.cause_detail', slug=cause.slug)}}">
+                    {{ _('Log in') }} 
+                </a>
+                {{ _('to post.') }}
+            </strong></p>
+            {% else %}
+            <p><strong>
+                <a href="{{ url_for('causes.cause_support', slug=cause.slug)}}">
+                    {{ _('Support this cause') }}
+                </a>
+                {{ _('to post.') }}
+            </strong></p>
             {% endif %}
         </div>
     </div>
-    <div class="row u-add-margin-top">
-        <div class="one-half column">
-            <h4 class="u-remove-margin-bottom">{{ _('%(count)s comments', count=post.comments.count()) }}</h4>
-        </div>
-    </div>
-    {% for comment in post.comments.all() %}
-        <div class="row u-add-margin-top">
-            <div class="post one-half column comment">
-                {{ comment.body|markdown }}
-                <p class="u-pull-left u-remove-margin-bottom">
-                    {{ render_avatar(comment.author) }}
-                    <em>{% if comment.created_on %}{{ comment.created_on.strftime('%b. %d, %Y') }}{% endif %}</em>
-                </p>
-            </div>
-        </div>
-    {% endfor %}
 
 </div>
 {% endblock %}
