--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -84,7 +84,7 @@
                     {% elif active_page == "signup" %}
                         <!-- If on signupd page, show login button only -->
                         <a href="{{ url_for('users.login') }}" title="Log In" class="button u-pull-right">
-                            <span class="button-text-with-img">Logout</span>
+                            <span class="button-text-with-img">Login&nbsp;</span>
                             <img src="{{ url_for('static', filename='open-iconic/png/account-login-2x.png') }}">
                         </a>
                     {% else %}
