--- a/app/templates/users/signup.html
+++ b/app/templates/users/signup.html
@@ -22,6 +22,13 @@ $(document).ready(function() {
 {% endblock %}
 
 {% block content %}
+<div class="row">
+    <div class="twelve columns">
+        <div class="flash warning u-remove-margin-top u-cf" role="alert">
+            <strong>Need to protect your privacy?</strong> Use a pseudonym and don't log in with a social media account linked to your real identity.
+        </div>
+    </div>
+</div>
 <div class="container u-add-margin-top">
     {% from "helpers/forms.html" import render_field, render_boolean %}
     <form id="signup" name="signup" action="" method="post">
