--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -143,8 +143,8 @@
                     <h4>{{ _('Information') }}</h4>
                     <ul>
                         <li><a href="{{ url_for('contact') }}">{{ _('Contact') }}</a></li>
-                        <li><a href="/about">{{ _('About Us') }}</a></li>
-                        <li><a href="/how_it_works">{{ _('How it works') }}</a></li>
+                        <!--<li><a href="/about">{{ _('About Us') }}</a></li>-->
+                        <!--<li><a href="/how_it_works">{{ _('How it works') }}</a></li>-->
                     </ul>
                 </div>
                 {% if debug %}
