--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -151,9 +151,8 @@
                 <div class="three columns">
                     <h4>{{ _('Developers') }}</h4>
                     <ul>
-                        <li><a href="{{ url_for('styleguide.styleguide') }}">
-                            {{ _('Styleguide') }}
-                        </a></li>
+                        <li><a href="{{ url_for('styleguide.styleguide') }}">{{ _('Styleguide') }}</a></li>
+                        <li><a href="https://github.com/bananana/solid/">Github</a></li>
                     </ul>
                 </div>
                 {% endif %}
