--- a/app/templates/styleguide/forms.html
+++ b/app/templates/styleguide/forms.html
@@ -58,11 +58,11 @@ $(document).ready(function() {
             <p>You may use <code>success</code>, <code>warning</code> or <code>danger</code> classes to style buttons for specific purposes.</p>
             <button class="success">Success</button>
             <button class="warning">Warning</button>
-            <button class="error">Error</button>
+            <button class="danger">Danger</button>
             <pre>
 &lt;button class="success"&gt;Success&lt;/button&gt;
 &lt;button class="warning"&gt;Warning&lt;/button&gt;
-&lt;button class="error"&gt;Error&lt;/button&gt;</pre>
+&lt;button class="danger"&gt;Danger&lt;/button&gt;</pre>
             <p><code>&lt;button&gt;</code> and <code>&lt;input&gt;</code> elements with <code>disabled</code> parameter will automatically get styled accordingly. <code>&lt;a&gt;</code> tag has to have <code>button-disabled</code> class to get styled.</p>
             <a class="button button-disabled">Anchor Element</a>
             <button class="button-primary" disabled>Button Element</button>
