--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -487,49 +487,8 @@ a.support-action {
     padding: 1em;
     margin-top: 2em;
 }
-.post article {
-    /* Height is set dynamically in app/static/js/conversation.js 
-     * height: 85px; */
-    overflow: hidden;
-    position: relative;
-    -moz-transition: height 0.5s;
-    -ms-transition: height 0.5s;
-    -o-transition: height 0.5s;
-    -webkit-transition: height 0.5s;
-    transition: height 0.5s;
-}
-.post article .fade {
-    position: absolute; 
-    bottom: 0;
-    width:100%;
-    height: 85px;
-    background: -webkit-linear-gradient(
-        rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 1) 100%
-    ); 
-    background-image: -moz-linear-gradient(
-        rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 1) 100%
-    );
-    background-image: -o-linear-gradient(
-        rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 1) 100%
-    );
-    background-image: linear-gradient(
-        rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 1) 100%
-    );
-    background-image: -ms-linear-gradient(
-        rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 1) 100%
-    );
-} 
-.post article .fade small {
-    float: right;
-    margin-top: 68px;
-}
-.post article .fade small a {
-    cursor: pointer;
+.post small a {
+    margin-top: 3px;
 }
 .post article h1, .comment article h1, 
 .post article h2, .comment article h2,
