Added some padding to action slider viewport, otherwise the action button drop shadow doesn't show up

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -445,6 +445,9 @@ p {
 .bx-wrapper .bx-prev:hover:before {
     background: url(../open-iconic/png/chevron-left-3x.png) no-repeat center left;
 }
+.bx-viewport {
+    padding: 10px 0;
+}
 .actions-slider {
     margin-right: 16px;
 }
@@ -453,8 +456,7 @@ p {
 a.support-action {
     width: 90%;
     text-decoration: none;
-    border: 1px solid #bbb;
-    border-color: #3299bb;
+    border: 1px solid #3299bb;
     box-shadow: 0 0 10px #e5e5e5;
     padding: 0.5em 1em;
 }
