Reversed the order in which replies appear on post page. Newest ones are now on top.

--- a/app/templates/posts/post.html
+++ b/app/templates/posts/post.html
@@ -60,7 +60,7 @@
             {% endif %}
         </div>
         <div class="one-half column">
-            {% for comment in post.comments.all() %}
+            {% for comment in post.comments.all() | reverse %}
                 <div class="row">
                     <div class="post u-remove-margin-top u-add-margin-bottom column comment">
                         {{ comment.body|markdown }}
