--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,7 @@
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='Skeleton/images/favicon.png') }}">
    
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/fonts.css') }}">
+    <link rel="stylesheet" type "text/css" href="{{ url_for('static', filename='open-iconic/font/css/open-iconic.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Skeleton/css/normalize.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Skeleton/css/skeleton.css') }}">
     {% block styles %}{% endblock %}
@@ -83,16 +84,19 @@
                         </a>
                         <small class="u-pull-right" style="margin-top:1.8em; margin-right:1em;">{{ _('Don\'t have an account?') }}</small>
                     {% elif active_page == "signup" %}
-                        <!-- If on signupd page, show login button only -->
+                        <!-- If on signup page, show login button only -->
                         <a href="{{ url_for('users.login') }}" title="Log In" class="button u-pull-right">
-                            <span class="button-text-with-img">Login&nbsp;</span>
-                            <img src="{{ url_for('static', filename='open-iconic/png/account-login-2x.png') }}">
+                            <span class="u-hide-on-mobile">Login&nbsp;</span>
+                            <span class="oi" data-glyph="account-login" title="Login" aria-hidden="true"></span>
                         </a>
                     {% else %}
                         {% if current_user.is_authenticated %} 
                             <!-- If authenticated, show logout button -->
-                            <a href="{{ url_for('users.logout') }}" title="Log Out" class="button u-pull-right">
-                                <img src="{{ url_for('static', filename='open-iconic/png/account-logout-2x.png') }}">
+                            <a href="{{ url_for('users.logout') }}" 
+                               title="Log Out"
+                               class="button u-pull-right">
+                                <span class="u-hide-on-mobile">Logout&nbsp;</span>
+                                <span class="oi" data-glyph="account-logout" title="Logout" aria-hidden="true"></span>
                             </a>
                             <span class="user">
                                 {{ _('Logged&nbsp;in&nbsp;as&nbsp;') }}
@@ -103,14 +107,14 @@
                         {% else %}
                             <!-- Otherwise show both Login and Signup buttons at the same time -->
                             <a href="{{ url_for('users.login') }}" 
-                                title="{{ _('Log In') }}" 
-                                class="button u-add-margin-left u-pull-right">
-                                <span class="button-text-with-img">Login&nbsp;</span>
-                                <img src="{{ url_for('static', filename='open-iconic/png/account-login-2x.png') }}">
+                               title="{{ _('Log In') }}" 
+                               class="button u-add-margin-left u-pull-right">
+                                <span class="u-hide-on-mobile">Login&nbsp;</span>
+                                <span class="oi" data-glyph="account-login" title="Login" aria-hidden="true"></span>
                             </a>
                             <a href="{{ url_for('users.signup') }}" 
-                                title="{{ _('Sign Up') }}" 
-                                class="button button-primary u-pull-right">
+                               title="{{ _('Sign Up') }}" 
+                               class="button button-primary u-pull-right">
                                 {{ _('Sign Up') }}
                             </a>
                         {% endif %}
