Forgot an equals sign...

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='Skeleton/images/favicon.png') }}">
    
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/fonts.css') }}">
-    <link rel="stylesheet" type "text/css" href="{{ url_for('static', filename='open-iconic/font/css/open-iconic.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='open-iconic/font/css/open-iconic.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Skeleton/css/normalize.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Skeleton/css/skeleton.css') }}">
     {% block styles %}{% endblock %}
