--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -54,12 +54,6 @@ $(document).ready(function() {
             </fieldset>
         </div>
         <div class="row">
-            <div class="six columns offset-by-three flash">
-                <strong>Forgot your password?</strong> E-mail us for assistance:
-                <a href="mailto:{{ contact_email }}">{{ contact_email }}</a>
-            </div>
-        </div>
-        <div class="row">
             <div class="three columns offset-by-three">
                 <fieldset>
                     <input id="login" type="submit" value="{{ _('Log In') }}"
@@ -72,6 +66,12 @@ $(document).ready(function() {
                     <a href="/terms_of_service">{{ _('terms of service') }}</a>.
                 </small>
             </div>
+        </div>
+        <div class="row">
+            <small class="six columns offset-by-three flash">
+                <strong>Forgot your password?</strong> E-mail us for assistance:
+                <a href="mailto:{{ contact_email }}">{{ contact_email }}</a>
+            </small>
         </div>
     </form>
     <hr>
